# edc

./: README.md  edc.py  pyproject.toml
edc/LinearEDC/: EDC_linear.py
edc/sedc-multiclass/: SEDC_agnostic_multiclass.py  __init__.py  fn_sedc.py
edc/sedc_agnostic/: fn_sedc.py  sedc_algorithm.py  sedc_algorithm.py.bak
