[tool.poetry]
name = "edc"
version = "0.2.1"
description = "Search for Evidence Counterfactuals"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ordered-set = "^4.0.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[package]
includes = ["edc/*"]
